# mana-symbols-typst

./: README.md
example/: example.typ
package/: README.md  example.typ  lib.typ  typst.toml
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
