[package]
name = "wubrg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Same package and version as Typst uses.
ciborium = "0.2.1"
mana-symbols = "0.2.0"
serde = "1.0"
wasm-minimal-protocol = "0.1.0"


[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
